--- a/.gitignore
+++ b/.gitignore
@@ -34,5 +34,7 @@ build/
 # unless supporting rvm < 1.11.0 or doing something fancy, ignore this:
 .rvmrc
 .gitignore
-credentials.rb
+globals.rb
+globals.var
 snippets.rb
+scratch.rb
